--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       </style>
   </head>
   <body>
-
+    <p><img src="logo/mypod.png" alt="mypod Logo"></p>
     <h1>Welcome to myPod</h1>
     <p>
       Welcome to the place to show off your iPod, wherever you might be.
@@ -23,10 +23,18 @@
       Space Needle.  You can't see the 628 coffee shops.
     </p>
     <P>
+    <a href="html/seattle_video_med.html">
       <img src="thumbnails/seattle_video_med.jpg" alt="My video ipod in Seattle, WA">
+    </a>
+    <a href="html/seattle_classic.html">
       <img src="thumbnails/seattle_classic.jpg" alt="A classic ipod in Seattle, WA">
+      </a>
+    <a href="html/seattle_shuffle.html">
       <img src="thumbnails/seattle_shuffle.jpg" alt="An ipod Shuffle in Seattle, WA">
+    </a>
+    <a href="html/seattle_downtown.html">
       <img src="thumbnails/seattle_downtown.jpg" alt="An ipod in downtown Seattle, WA">
+    </a>
     </P>
     <h2>Birmingham, England</h2>
     <p>Here are some ipod photos around Birmingham. We've obviously got some 
@@ -34,8 +42,12 @@
       red Birmingham telephone box!
     </p>
     <p>
+    <a href="html/britain.html">
       <img src="thumbnails/britain.jpg" alt="An ipod in Birmingham at a telephone box">
+    </a>
+    <a href="html/applestore.html">
       <img src="thumbnails/applestore.jpg" alt="An ipod at the Birmingham Apple store">
+    </a>
     </p>
   </body>
 </html>
